--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -4,7 +4,7 @@ import Television from "./Television.astro";
 
 <section class="projects snap-start -z-10">
   <div class="title">
-    MY PROJECTS
+    PERSONAL PROJECTS
   </div>
   <Television />
 </section>
