--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -8,8 +8,8 @@ import { Icon } from "astro-icon/components";
     <div class="win95-title flex items-center content-between min-h-6">
       <button class="win95-button ml-auto retro-font min-w-6 min-h-5 cursor-pointer inline-flex items-center content-center">x</button>
     </div>
-    <div class="flex items-center justify-center flex-wrap gap-5">
-      <div class="polaroid-outer pt-5 mr-7 ml-3 mt-3 pb-4 justify-self-center w-[100%] max-w-[350px]">
+    <div class="flex items-center justify-center flex-wrap gap-5 p-4 md:p-6">
+      <div class="polaroid-outer pt-5 mt-4 md:mt-0 mx-auto md:mx-0 pb-4 justify-self-center w-[100%] max-w-[350px]">
         <div class="polaroid-inner justify-self-center w-[90%] overflow-hidden">
           <img src="/profile-pic.jpg" alt="Profile Picture" class="w-[100%] h-auto block" />
         </div>
