add heart and portfolio gif

--- a/src/components/Television.astro
+++ b/src/components/Television.astro
@@ -2,7 +2,9 @@
 const channels = [
   { src: "/Bot.gif", type: "image" },
   { src: "/Rezept.png", type: "image" },
-  { src: "/tookiorg.gif", type: "image" }
+  { src: "/tookiorg.gif", type: "image" },
+  { src: "/heart.gif", type: "image" },
+  { src: "/portfolio.gif", type: "image" }
 ];
 ---
 
@@ -43,7 +45,9 @@ const channels = [
   const channels = [
     { src: "/Bot.gif", type: "image" },
     { src: "/Rezept.png", type: "image" },
-    { src: "/tookiorg.gif", type: "image" }
+    { src: "/tookiorg.gif", type: "image" },
+    { src: "/heart.gif", type: "image" },
+    { src: "/portfolio.gif", type: "image" }
   ];
   
   let currentChannel = 0;
