--- a/src/components/Career.astro
+++ b/src/components/Career.astro
@@ -1,5 +1,5 @@
 <section class="min-h-screen snap-start">
-    <div class="title retro-font text-5xl text-[#ff9ef0] pt-16 text-center">
+    <div class="title retro-font text-2xl sm:text-3xl md:text-4xl lg:text-5xl text-[#ff9ef0] pt-16 text-center">
       EDUCATION & CAREER
     </div>
   
