--- a/src/components/Television.astro
+++ b/src/components/Television.astro
@@ -1,10 +1,15 @@
 ---
+import botgif from "../assets/Bot.gif";
+import rezept from "../assets/Rezept.png";
+import tookiorg from "../assets/tookiorg.gif";
+import heart from "../assets/heart.gif";
+import portfolio from "../assets/portfolio.gif";
 const channels = [
-  { src: "/Bot.gif", type: "image" },
-  { src: "/Rezept.png", type: "image" },
-  { src: "/tookiorg.gif", type: "image" },
-  { src: "/heart.gif", type: "image" },
-  { src: "/portfolio.gif", type: "image" }
+  { src: botgif, type: "image" },
+  { src: rezept, type: "image" },
+  { src: tookiorg, type: "image" },
+  { src: heart, type: "image" },
+  { src: portfolio, type: "image" }
 ];
 ---
 
