--- a/src/components/Television.astro
+++ b/src/components/Television.astro
@@ -5,11 +5,11 @@ import tookiorg from "../assets/tookiorg.gif";
 import heart from "../assets/heart.gif";
 import portfolio from "../assets/portfolio.gif";
 const channels = [
-  { src: botgif, type: "image" },
-  { src: rezept, type: "image" },
-  { src: tookiorg, type: "image" },
-  { src: heart, type: "image" },
-  { src: portfolio, type: "image" }
+  { src: botgif.src, type: "image" },
+  { src: rezept.src, type: "image" },
+  { src: tookiorg.src, type: "image" },
+  { src: heart.src, type: "image" },
+  { src: portfolio.src, type: "image" }
 ];
 ---
 
