--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,12 +20,14 @@ import Career from "../components/Career.astro";
 </Layout>
 
 <style>
-  #background {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-  }
+#background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  object-fit: cover;
+  object-position: center;
+}
 </style>
