--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -14,9 +14,7 @@ import Television from "./Television.astro";
 
 .projects {
   min-height: 100vh;
-  width: 100vw;
-  margin-left: calc(-1 * (100vw - 100%) / 2);
-  background: #705670;
+  width: 100%;
   padding: 4rem 0;
   display: flex;
   flex-direction: column;
