removed snap scroll

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -2,7 +2,7 @@
 import Television from "./Television.astro";
 ---
 
-<section class="projects snap-start -z-10">
+<section class="projects -z-10">
   <div class="title">
     PERSONAL PROJECTS
   </div>
