--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Career from "../components/Career.astro";
 ---
 
 <Layout>
-  <div class="h-screen snap-y snap-mandatory overflow-y-scroll px-4 md:px-6 lg:px-8">
+  <div class="h-screen overflow-y-scroll px-4 md:px-6 lg:px-8">
     <img id="background" src={background.src} alt="" fetchpriority="high" />
     <Welcome />
     <AboutMe />
