--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -1,4 +1,4 @@
-<section class="min-h-screen snap-start">
+<section class="min-h-screen">
   <div class="title retro-font text-2xl sm:text-3xl md:text-4xl lg:text-5xl text-[#ff9ef0] pt-16 text-center">
     SKILLS & TOOLS
   </div>
