--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -1,4 +1,4 @@
-<section class="min-h-screen flex items-center justify-center snap-start px-4">
+<section class="min-h-screen flex items-center justify-center px-4">
   <div class="flex flex-col items-center justify-center text-center">
     <div class="w-full">
       <h1 class="title-retro title-retro-shadow text-3xl sm:text-4xl md:text-6xl lg:text-9xl">
