fixed projects title

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -3,7 +3,7 @@ import Television from "./Television.astro";
 ---
 
 <section class="projects -z-10">
-  <div class="title">
+  <div class="title retro-font text-2xl sm:text-3xl md:text-4xl lg:text-5xl text-[#ff9ef0] pt-16 text-center">
     PERSONAL PROJECTS
   </div>
   <Television />
@@ -21,12 +21,11 @@ import Television from "./Television.astro";
   align-items: center;
 }
 
-.title {
+.retro-font {
   font-family: "Press Start 2P", serif;
-  font-size: 3rem;
-  color: #ff9ef0;
-  text-shadow: 0.08em 0.08em #111fe4;
-  margin-bottom: 2rem;
-  text-align: center;
 }
+
+.title {
+  text-shadow: 0.08em 0.08em #111fe4;
+    }
 </style>
